--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "elliptic": "6.5.3",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -16,7 +17,8 @@
     "sass": "1.3.0",
     "sass-rem": "^2.0.1",
     "typescript": "3.2.1",
-    "webpack": "4.42.0"
+    "webpack": "4.42.0",
+    "websocket-extensions": "0.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
