--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "3.4.1",
     "sass": "1.3.0",
     "sass-rem": "^2.0.1",
+    "serialize-javascript": "^3.1.0",
     "typescript": "3.2.1",
     "webpack": "4.42.0",
     "websocket-extensions": "0.1.4"
